--- a/components/maintenance/healthclub.jade
+++ b/components/maintenance/healthclub.jade
@@ -63,6 +63,7 @@ template(name='healthclub')
                             div
                             +health_club_info
                         .column
+                            h1.ui.header www.goldrun.online
                             .ui.header Health Club Hours
                             .ui.grid
                                 .row
