--- a/components/maintenance/kiosk.jade
+++ b/components/maintenance/kiosk.jade
@@ -165,7 +165,7 @@ template(name='resident_guest')
 
 
 template(name='healthclub_stats')
-    if is_staff
+    if is_dev
         .ui.button.recalc recalc #{user.username}
     div
     .ui.list
